2010-09-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (present-clfswm-terminal)
	(present-virtual-keyboard): Use a function (generic-present-body)
	instead of a macro (generate-present-body).

	* src/clfswm-util.lisp (update-menus): List all directories and
	subdirectories in $XDG_DATA_DIRS/applications.

2010-09-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (generate-present-body): New macro.
	(present-clfswm-terminal, present-virtual-keyboard): Use
	generate-present-body.

2010-09-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (update-menus): Follow XDG specifications
	instead of the non-portable Debian update-menu.

2010-09-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (error-handler): New function do handle
	asynchronous errors and ignore them.
	(open-display): Install the new error-handler on display.

2010-09-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Add a
	with-simple-restart on top of body execution.

2010-09-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Protect all xlib functions with an
	with-xlib-protect.

	* src/xlib-util.lisp (handle-event): use with-xlib-protect only in
	handle-event. Add a with-simple-restart to prevent a
	clisp/new-lisp infinite loop.

2010-08-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (present-clfswm-terminal): Make the
	clfswm terminal working even on xterm title changes.

2010-08-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-other-window-manager): Update for
	clisp compatibility.

	* src/tools.lisp (do-execute): New parameter io to change the
	input/output method.

	* src/clfswm-util.lisp (hide-current-child): Prevent from removing
	the current root.

	* src/clfswm-internal.lisp (child-member): New predicate.
	(child-remove): New function.
